# libsonata

./: .clang-format  .codeclimate.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .gitreview  .readthedocs.yaml  .travis.yml  AUTHORS.txt  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: check_generated_docstrings.yaml  clang_format_check.yaml  coverage_test.yaml  docstring_check.yaml  mirror-ebrains.yml  publish-sdist-wheels.yml  run-tests.yml  run_test.yaml  upload-wheels.yaml
CMake/: CatchAddTests.cmake  CodeCoverage.cmake  sonata-config.cmake
ci/: README.md  check_clang_format.sh  check_generated_docstrings.sh  ci-buildwheel-prepare-linux.sh  coverage_test.sh  cpp_test.sh  hdf5-build.sh  prepare_for_wheel_build.sh  python_build_sdist.sh  python_push_sdist.sh  python_sdist.sh  python_test.sh
doc/: Doxyfile
docs/: environment.yml  requirements_docs.txt
docs/source/: Doxyfile  api.rst  conf.py  cpp.rst  footer.html  header.html  index.rst
extlib/: CMakeLists.txt  README.txt
include/bbp/reports/: records.h
include/bbp/sonata/: collective_io_options.h  common.h  config.h  edges.h  hdf5_collective_reader.h  hdf5_reader.h  io_options.h  node_sets.h  nodes.h  output.h  population.h  report_reader.h  reports.h  selection.h  types.h  unique_tuple.h  variant.hpp
libsonata/: __init__.py
python/: CMakeLists.txt  __init__.py  bindings.cpp  config_wheel.sh  docstrings.h  setup.py  test.py
python/libsonata/: __init__.py  __init__.py.in
python/multibuild/: config.sh
python/sonata/: __init__.py.in
python/tests/: __init__.py  test.py  test_config.py  test_nodesets.py  test_population.py  test_reports.py
src/: CMakeLists.txt  common.cpp  config.cpp  edge_index.cpp  edge_index.h  edges.cpp  hdf5_collective_reader.cpp  hdf5_mutex.cpp  hdf5_mutex.hpp  hdf5_reader.cpp  hdf5_reader.hpp  node_sets.cpp  nodes.cpp  output.cpp  population.cpp  population.hpp  read_bulk.hpp  read_canonical_selection.hpp  report_reader.cpp  selection.cpp  utils.cpp  utils.h  version.cpp.in
src/data/: node.cpp  node.h  soma_node.cpp  sonata_data.cpp  sonata_data.h
src/io/: h5typemap.hpp  hdf5_writer.cpp  hdf5_writer.h
src/reports/: CMakeLists.txt
src/reports/client/: main.cpp
src/reports/data/: node.cpp  node.h  node.hpp  soma_node.cpp  soma_node.h  soma_node.hpp  sonata_data.cpp  sonata_data.h  sonata_data.hpp
src/reports/io/: h5typemap.hpp  hdf5_writer.cpp  hdf5_writer.h  hdf5_writer.hpp  io_writer.hpp
src/reports/utils/: logger.cpp  logger.hpp
src/utils/: logger.cpp  logger.h
tests/: CMakeLists.txt  main.cpp  test_config.cpp  test_edges.cpp  test_node_sets.cpp  test_nodes.cpp  test_output.cpp  test_report_reader.cpp  test_selection.cpp
tests/data/: edges-no-index.h5  edges1.h5  elements.h5  generate.py  node_sets.json  nodes1.h5  soma.h5  somas.h5  spikes.h5
tests/data/config/: circuit_config.json  simulation_config.json
tests/integration/: CMakeLists.txt  compartment_report_serial.ref  integration_test.cpp  soma_report_serial.ref
tests/reports/: CMakeLists.txt  test_cell.cpp  test_node.cpp  test_report.cpp  test_reportformat.cpp  test_reportinglib.cpp  test_sonatadata.cpp  tests.cpp
tests/reports/integration/: CMakeLists.txt  compartment_report.ref  compartment_report_serial.ref  integration_test.cpp  integration_test.sh.in  soma_report.ref  soma_report_serial.ref  spikes.ref  spikes_serial.ref
tests/reports/unit/: CMakeLists.txt  test_node.cpp  test_report.cpp  test_sonatadata.cpp  test_sonatareport.cpp  tests.cpp
tests/unit/: CMakeLists.txt  test_node.cpp  test_report.cpp  test_sonatadata.cpp
